--- a/custom.css
+++ b/custom.css
@@ -3,12 +3,15 @@ html {
 }
 
 body {
-	background: url("https://images.unsplash.com/photo-1440500122534-703c6966f83d?dpr=1&auto=format&fit=crop&w=1500&h=NaN&q=80&cs=tinysrgb&crop=");
+	/*background: url("https://images.unsplash.com/photo-1440500122534-703c6966f83d?dpr=1&auto=format&fit=crop&w=1500&h=NaN&q=80&cs=tinysrgb&crop=");
+	*/
+	background-color: red;
 	background-size: cover;
 	background-position: center;
 	font-family: Lato;
 	color: green;
 }
+
 
 #content {
 	text-align: center;
