--- a/custom.css
+++ b/custom.css
@@ -10,8 +10,13 @@ body {
 	background-position: center;
 	font-family: Lato;
 	color: green;
+	padding-top: 51px; /*size of fixed navigation bar*/
 }
 
+.section {
+	border: 1px solid black;
+	background-color: yellow;
+}
 
 #content {
 	text-align: center;
