--- a/custom.css
+++ b/custom.css
@@ -10,7 +10,7 @@ body {
 	background-position: center;
 	font-family: Lato;
 	color: green;
-	padding-top: 51px; /*size of fixed navigation bar*/
+	padding-top: 50px; /*size of fixed navigation bar*/
 }
 
 .section {
@@ -18,9 +18,9 @@ body {
 	background-color: yellow;
 }
 
-#content {
+#content h2{
 	text-align: center;
-	padding-top: 25%;
+	padding-top: 0%;
 	text-shadow: 0px 4px 3px rgba(51,153,52,0.4),
 							0px 8px 13px rgba(51,153,52,0.1),
 							0px 18px 23px rgba(51,153,52,0.1);
@@ -50,9 +50,9 @@ body {
 }
 
 
-h1 {
+h2 {
 	font-weight: 700;
-	font-size: 5em;
+	/*font-size: 5em;*/
 }
 
 hr {
