--- a/custom.css
+++ b/custom.css
@@ -19,6 +19,8 @@ body {
 }
 
 #content h2{
+	/*font-size: 5em;*/
+	font-weight: 700;
 	text-align: center;
 	padding-top: 0%;
 	text-shadow: 0px 4px 3px rgba(51,153,52,0.4),
@@ -49,12 +51,6 @@ body {
 	background: green;
 }
 
-
-h2 {
-	font-weight: 700;
-	/*font-size: 5em;*/
-}
-
 hr {
 	border-top: 1px solid green;
 	width: 260px;
@@ -62,4 +58,9 @@ hr {
 	/* if color white(defult) suppose to give shadow
 	border-top: 1px solid #f8f8f8;
 	border-bottom: 1px solid rgba(0,0,0,0.2);*/
+}
+
+footer {
+	text-align: center;
+	background-color: blue;
 }
