--- a/custom.css
+++ b/custom.css
@@ -9,6 +9,7 @@ body {
 	background-size: cover;
 	background-position: center;
 	font-family: Lato;
+	font-size: 20px;
 	color: green;
 	padding-top: 50px; /*size of fixed navigation bar*/
 }
@@ -59,6 +60,16 @@ hr {
 	border-top: 1px solid #f8f8f8;
 	border-bottom: 1px solid rgba(0,0,0,0.2);*/
 }
+
+#contactsList {
+	padding: 0px;
+	text-align: center;
+}
+
+#contactsList > li {
+	display: inline;
+}
+
 
 footer {
 	text-align: center;
