--- a/custom.css
+++ b/custom.css
@@ -17,10 +17,12 @@ body {
 .section {
 	border: 1px solid black;
 	background-color: yellow;
+	padding: 0 5% 5% 5%;
 }
 
 #content h2{
 	/*font-size: 5em;*/
+	font-size: 2em;
 	font-weight: 700;
 	text-align: center;
 	padding-top: 0%;
