--- a/custom.css
+++ b/custom.css
@@ -75,5 +75,9 @@ hr {
 
 footer {
 	text-align: center;
-	background-color: blue;
+	background-color: #e7e7e7;
+  height: 50px;
+  padding: 15px 15px;
+  font-size: 18px;
+  line-height: 20px;
 }
