--- a/custom.css
+++ b/custom.css
@@ -15,9 +15,10 @@ body {
 	background-color: yellow;
 	padding: 0 5% 5% 5%;
 	width: 76%;
+	height: 700px;
 }
 
-#preFooter {
+#contact {
 	padding: 0;
 }
 
@@ -28,10 +29,16 @@ body {
 }
 
 h2{
+
+	/*display: block;
+	position: relative;*/
+	/*top: 50px;*/
+	/*visibility: hidden;*/
+	/*padding-top: 0px;*/
 	font-size: 2em;
 	font-weight: 700;
 	text-align: center;
-	padding-top: 0%;
+	/*padding-top: 0%;*/
 	text-shadow: 0px 4px 3px rgba(51,153,52,0.4),
 							0px 8px 13px rgba(51,153,52,0.1),
 							0px 18px 23px rgba(51,153,52,0.1);
@@ -86,4 +93,11 @@ footer {
   padding: 15px 15px;
   font-size: 18px;
   line-height: 20px;
+}
+
+.anchor {
+	display: block;
+	position: relative;
+	top: -50px;
+	visibility: hidden;
 }
