--- a/custom.css
+++ b/custom.css
@@ -79,6 +79,10 @@ hr {
 	font-size: 2em;
 }
 
+#contactsList i:hover {
+	color: #5e5e5e;
+}
+
 footer {
 	text-align: center;
 	background-color: #e7e7e7;
