--- a/custom.css
+++ b/custom.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-	background-color: red;
+	background-color: #888;
 	font-family: Lato;
 	font-size: 20px;
 	color: green;
@@ -11,11 +11,13 @@ body {
 }
 
 .section {
-	border: 1px solid black;
-	background-color: yellow;
+	/*border: 1px solid black;*/
+	background-color: #eee;
 	padding: 0 5% 5% 5%;
 	width: 76%;
-	height: 700px;
+}
+.section:nth-of-type(2n+1) {
+	background-color: silver;
 }
 
 #contact {
@@ -66,7 +68,8 @@ hr {
 }
 
 #contactsList {
-	padding: 0px;
+	padding: 0%;
+	margin-bottom: -5%;
 	text-align: center;
 }
 
